force-app/main/default/objects/PMD_Finding__c/PMD_Finding__c.object-meta.xml
<CustomObject>
    <label>PMD Finding</label>
    <nameField>
        <displayFormat>FINDING-{00000}</displayFormat>
        <label>PMD Finding</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMD Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>