force-app/main/default/objects/PMD_Finding__c/fields/AI_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion__c</fullName>
    <label>AI Suggestion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>