force-app/main/default/objects/PMD_Finding__c/fields/Code_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Code_Snippet__c</fullName>
    <label>Code Snippet</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>