force-app/main/default/objects/PMD_Finding__c/fields/PMD_Analysis__c.field-meta.xml
<CustomField>
    <fullName>PMD_Analysis__c</fullName>
    <label>PMD Analysis</label>
    <referenceTo>PMD_Analysis__c</referenceTo>
    <relationshipLabel>PMD Findings</relationshipLabel>
    <relationshipName>PMD_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>