force-app/main/default/objects/PMD_Finding__c/fields/Suggestion_Generated__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggestion Generated</label>
    <type>Checkbox</type>
</CustomField>